syntax = "proto3";

package cloud;

option go_package = "cloud/cloudv1";

service Cloud {
  rpc Upload(stream UploadRequest) returns (UploadResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc Download(DownloadRequest) returns (stream DownloadResponse);
}

message UploadRequest {
  oneof data {
    string name = 1;
    bytes chunk = 2;
  }
}

message UploadResponse {
  string name = 1;
  uint32 size = 2;
}

message ListRequest {}

message ListResponse {
  repeated FileStructure files = 1;
}

message FileStructure {
  string name = 1;
  string created_at = 2;
  string updated_at = 3;
}

message DownloadRequest {
  string name = 1;
}

message DownloadResponse {
  bytes chunk = 1;
}
